--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,23 @@ body {
     text-wrap: balance;
   }
 }
+
+.posts-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 -5px; /* Adjust margin to create space between items */
+}
+
+.post-card {
+  width: calc(50% - 10px); /* Adjust width to occupy half of the container */
+  margin: 5px 0; /* Adjust margin to create space between items */
+}
+
+@media screen and (min-width: 768px) {
+  .post-card {
+    width: calc(
+      33.33% - 10px
+    ); /* Adjust width to occupy one-third of the container */
+  }
+}
